--- a/Hello.html
+++ b/Hello.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Three colors in Indian flag are:</h1>
     <ul>
-        <li>Saffron</li>
+        <li style="color: orange;background-color: orange;border: black;">Saffron</li>
         <li>Pure white</li>
         <li>Thick green</li>
     </ul>
