--- a/Hello.html
+++ b/Hello.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <h1>Three colors in Indian flag are:</h1>
-    <ul>
-        <li style="color: orange;background-color: orange;border: black;">Saffron</li>
-        <li>Pure white</li>
-        <li>Thick green</li>
+    <ul style="color: darkcyan;">
+        <li style="color: orange">Saffron</li>
+        <li style="color: white">Pure white</li>
+        <li style="color: green;">Thick green</li>
     </ul>
 </body>
 </html>
