added all colors

--- a/Hello.html
+++ b/Hello.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Three colors in Indian flag are:</h1>
-    <ul style="color: darkcyan;">
+    <ul style="background-color: darkcyan;">
         <li style="color: orange">Saffron</li>
         <li style="color: white">Pure white</li>
         <li style="color: green;">Thick green</li>
