--- a/Hello.html
+++ b/Hello.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <h1>Three colors in Indian flag are:</h1>
-    <ul style="background-color: darkcyan;">
+    <ul>
         <li style="color: orange">Saffron</li>
         <li style="color: white">Pure white</li>
-        <li style="color: green;">Thick green</li>
+        <li style="color: green">Thick green</li>
     </ul>
 </body>
 </html>
